# dastr2

./: CMakeLists.txt  constants.h  differentiate.cpp  differentiate.h  evaluate.cpp  evaluate.h  expression.cpp  expression.h  main.cpp  menu.cpp  menu.h  node.cpp  node.h  parser.cpp  parser.h  printer.cpp  printer.h  simplify.cpp  simplify.h  valid.cpp  valid.h
